// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`card > default 1`] = `
<div>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-lg bg-card py-4 text-xs/relaxed text-card-foreground ring-1 ring-foreground/10 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 *:[img:first-child]:rounded-t-lg *:[img:last-child]:rounded-b-lg w-80"
    data-size="default"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-lg px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3"
      data-slot="card-header"
    >
      <div
        class="text-sm font-medium"
        data-slot="card-title"
      >
        Connection
      </div>
      <div
        class="text-xs/relaxed text-muted-foreground"
        data-slot="card-description"
      >
        Configure your database connection.
      </div>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3"
      data-slot="card-content"
    >
      <p
        class="text-xs text-muted-foreground"
      >
        PostgreSQL on localhost:5432
      </p>
    </div>
    <div
      class="flex items-center rounded-b-lg px-4 group-data-[size=sm]/card:px-3 [.border-t]:pt-4 group-data-[size=sm]/card:[.border-t]:pt-3"
      data-slot="card-footer"
    >
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-md border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all duration-150 ease-out outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 h-6 gap-1 px-2 text-xs/relaxed has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3 bg-primary text-primary-foreground hover:bg-primary/80"
        data-slot="button"
        tabindex="0"
        type="button"
      >
        Connect
      </button>
    </div>
  </div>
</div>
`;

exports[`card > small 1`] = `
<div>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-lg bg-card py-4 text-xs/relaxed text-card-foreground ring-1 ring-foreground/10 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 *:[img:first-child]:rounded-t-lg *:[img:last-child]:rounded-b-lg w-72"
    data-size="sm"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-lg px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3"
      data-slot="card-header"
    >
      <div
        class="text-sm font-medium"
        data-slot="card-title"
      >
        Quick query
      </div>
      <div
        class="text-xs/relaxed text-muted-foreground"
        data-slot="card-description"
      >
        Run a one-off SQL statement.
      </div>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3"
      data-slot="card-content"
    >
      <p
        class="text-xs text-muted-foreground"
      >
        SELECT * FROM users
      </p>
    </div>
  </div>
</div>
`;

exports[`card > withAction 1`] = `
<div>
  <div
    class="group/card flex flex-col gap-4 overflow-hidden rounded-lg bg-card py-4 text-xs/relaxed text-card-foreground ring-1 ring-foreground/10 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 *:[img:first-child]:rounded-t-lg *:[img:last-child]:rounded-b-lg w-80"
    data-size="default"
    data-slot="card"
  >
    <div
      class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-lg px-4 group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3"
      data-slot="card-header"
    >
      <div
        class="text-sm font-medium"
        data-slot="card-title"
      >
        Query history
      </div>
      <div
        class="text-xs/relaxed text-muted-foreground"
        data-slot="card-description"
      >
        Recent queries for this connection.
      </div>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      >
        <button
          class="group/button inline-flex shrink-0 items-center justify-center rounded-md border border-transparent bg-clip-padding font-medium whitespace-nowrap transition-all duration-150 ease-out outline-none select-none focus-visible:border-ring focus-visible:ring-2 focus-visible:ring-ring/50 disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-2 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 h-6 gap-1 px-2 text-xs/relaxed has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          Clear
        </button>
      </div>
    </div>
    <div
      class="px-4 group-data-[size=sm]/card:px-3"
      data-slot="card-content"
    >
      <p
        class="text-xs text-muted-foreground"
      >
        3 queries today
      </p>
    </div>
  </div>
</div>
`;
